<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:columnCount="5"
  android:rowCount="6">

  <!--    row 0 -->

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonClear"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="0"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/c"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonBrackets"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="0"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/brackets"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonPercent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="0"
    android:layout_column="2"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/percent"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatImageButton
    android:id="@+id/buttonDelete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="0"
    android:layout_column="3"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:textColor="@color/white"
    android:src="@drawable/ic_arrow_back"
    android:textSize="@dimen/standard_button" />

  <!--    row 1 -->

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonSeven"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="1"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_7"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonEight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="1"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_8"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonNine"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="1"
    android:layout_column="2"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_9"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonDivision"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="1"
    android:layout_column="3"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/division"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <!--    row 2 -->

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonFour"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="2"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_4"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonFive"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="2"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_5"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonSix"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="2"
    android:layout_column="2"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_6"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonMultiply"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="2"
    android:layout_column="3"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/multiply"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <!--    row 3 -->

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonOne"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="3"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_1"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonTwo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="3"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_2"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonThree"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="3"
    android:layout_column="2"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_3"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonMinus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="3"
    android:layout_column="3"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/minus"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <!--    row 4 -->

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonDot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="4"
    android:layout_column="0"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/dot"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonZero"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="4"
    android:layout_column="1"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/_0"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonEqual"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="4"
    android:layout_column="2"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/orange"
    android:text="@string/equal"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

  <androidx.appcompat.widget.AppCompatButton
    android:id="@+id/buttonPlus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_row="4"
    android:layout_column="3"
    android:layout_columnWeight="1"
    android:layout_rowWeight="1"
    android:background="@color/black"
    android:text="@string/plus"
    android:textColor="@color/white"
    android:textSize="@dimen/standard_button" />

</GridLayout>